k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vm-migration
  labels:
    name: vm-migration
    purpose: hypervisor-to-kvm-migration
